--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  
+  <header>
+    <picture>
+      <a href="#home"><img src="assets/img/" alt=""></a>
+    </picture>
+  </header>
 </body>
 </html>
