header e variaveis css

--- a/index.html
+++ b/index.html
@@ -7,10 +7,20 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  <header>
-    <picture>
-      <a href="#home"><img src="assets/img/" alt=""></a>
-    </picture>
+  <header class="header-bg">
+    <div class="header-conteudo container">
+      <picture class="logo">
+        <a href="#home"><img src="assets/img/logo.svg" alt=""></a>
+      </picture>
+      <nav aria-label="primaria">
+        <ul class="header-menu">
+          <li><a href="#sobre">Sobre Nós</a></li>
+          <li><a href="#projeto">O Projeto</a></li>
+          <li><a href="#atividades">Atividades</a></li>
+          <li><a href="#contato">Contato</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 </body>
 </html>
