--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
   <header class="header-bg">
     <div class="header-conteudo container">
       <picture class="logo">
-        <a href="#home"><img src="assets/img/logo.svg" alt=""></a>
+        <a href="#home"><img src="assets/img/logo.svg" width="143" height="48" alt="Juventude em movimento"></a>
       </picture>
       <nav aria-label="primaria">
         <ul class="header-menu">
@@ -22,5 +24,15 @@
       </nav>
     </div>
   </header>
+  <main>
+    <article class="intro-bg">
+      <div class="intro-conteudo container">
+        <h1>O esporte como ferramenta de
+          transformação social para crianças
+          e adolescentes</h1>
+      </div>
+    </article>
+  </main>
 </body>
+
 </html>
