layout da intro e form

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+
   <header class="header-bg">
     <div class="header-conteudo container">
       <picture class="logo">
@@ -24,12 +25,24 @@
       </nav>
     </div>
   </header>
+
   <main>
     <article class="intro-bg">
       <div class="intro-conteudo container">
         <h1>O esporte como ferramenta de
           transformação social para crianças
           e adolescentes</h1>
+        <div class="form-box">
+          <h2 class="titulo">É professor de Ed. Física?</h2>
+          <p class="mensagem">Seja voluntário e transforme vidas através do esporte.</p>
+          <form action="" method="get">
+            <label for="nome">Nome</label>
+            <input type="text" name="nome">
+            <label for="email">E-mail</label>
+            <input type="email" name="email">
+            <button type="submit">Quero ajudar</button>
+          </form>
+        </div>
       </div>
     </article>
   </main>
