--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
   </header>
 
   <main>
-    <article class="intro-bg">
+    <article id="sobre" class="intro-bg">
       <div class="intro-conteudo container">
-        <h1>O esporte como ferramenta de
+        <h1>
+          O esporte como ferramenta de
           transformação social para crianças
-          e adolescentes</h1>
+          e adolescentes<span>.</span>
+        </h1>
         <div class="form-box">
           <h2 class="titulo">É professor de Ed. Física?</h2>
           <p class="mensagem">Seja voluntário e transforme vidas através do esporte.</p>
