--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </header>
 
   <main>
-    <article id="sobre" class="intro-bg">
+    <article id="home" class="intro-bg">
       <div class="intro-conteudo container">
         <h1>
           O esporte como ferramenta de
@@ -48,6 +48,44 @@
       </div>
     </article>
   </main>
+
+  <footer class="footer-bg">
+    <div class="footer">
+      <img src="/assets/img/logo.svg" alt="Juventude em Movimento">
+      <div class="footer-contato">
+        <h3 class="">Contato</h3>
+        <ul class="">
+          <li><a href="tel:+5519992218997">+55 19 99221-8997</a></li>
+          <li><a href="mailto:contato@juventudeemmovimento.com">contato@juventudeemmovimento.com</a></li>
+          <li>Rua Jacy Teixeira, 360 - Jd. do Lago</li>
+          <li>Campinas - SP</li>
+        </ul>
+        <div class="footer-redes">
+          <a href="./">
+            <img src="assets/img/instagram.svg" alt="Instagram">
+          </a>
+          <a href="./">
+            <img src="assets/img/facebook.svg" alt="Facebook">
+          </a>
+          <a href="./">
+            <img src="assets/img/youtube.svg" alt="Youtube">
+          </a>
+        </div>
+      </div>
+      <div class="footer-informacoes">
+        <h3 class="">Informações</h3>
+        <nav>
+          <ul class="">
+            <li><a href="#sobre">Sobre Nós</a></li>
+            <li><a href="#projeto">O Projeto</a></li>
+            <li><a href="#atividades">Atividades</a></li>
+            <li><a href="#contato">Contato</a></li>
+          </ul>
+        </nav>
+      </div>
+      <p class="footer-copy">Juventude em Movimento 2024 © Todos os direitos reservados.</p>
+    </div>
+  </footer>
 </body>
 
 </html>
