Finalizado header, main, footer.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="header-bg">
     <div class="header-conteudo container">
       <picture class="logo">
-        <a href="#home"><img src="assets/img/logo.svg" width="143" height="48" alt="Juventude em movimento"></a>
+        <a href="#home"><img src="assets/img/logo.svg" width="143" height="48" alt="Juventude em Movimento"></a>
       </picture>
       <nav aria-label="primaria">
         <ul class="header-menu">
@@ -54,7 +54,7 @@
       <img src="/assets/img/logo.svg" alt="Juventude em Movimento">
       <div class="footer-contato">
         <h3 class="">Contato</h3>
-        <ul class="">
+        <ul>
           <li><a href="tel:+5519992218997">+55 19 99221-8997</a></li>
           <li><a href="mailto:contato@juventudeemmovimento.com">contato@juventudeemmovimento.com</a></li>
           <li>Rua Jacy Teixeira, 360 - Jd. do Lago</li>
@@ -75,7 +75,7 @@
       <div class="footer-informacoes">
         <h3 class="">Informações</h3>
         <nav>
-          <ul class="">
+          <ul>
             <li><a href="#sobre">Sobre Nós</a></li>
             <li><a href="#projeto">O Projeto</a></li>
             <li><a href="#atividades">Atividades</a></li>
