Criei menu hamburger mobile

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
       <picture class="logo">
         <a href="#home"><img src="assets/img/logo.svg" width="143" height="48" alt="Juventude em Movimento"></a>
       </picture>
-      <nav aria-label="primaria">
-        <ul class="header-menu">
+      <nav id="nav">
+        <button id="btn-mobile" class="btn-mobile" aria-label="Abrir Menu" aria-haspopup="true" aria-controls="menu" aria-expanded="false"><span class="hamburger"></span>
+        </button>
+        <ul class="header-menu" role="menu">
           <li><a href="#sobre">Sobre Nós</a></li>
           <li><a href="#projeto">O Projeto</a></li>
           <li><a href="#atividades">Atividades</a></li>
@@ -86,6 +88,8 @@
       <p class="footer-copy">Juventude em Movimento 2024 © Todos os direitos reservados.</p>
     </div>
   </footer>
+
+  <script src="/assets/js/script.js"></script>
 </body>
 
 </html>
