--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </div>
   </footer>
 
-  <script src="../assets/js/script.js"></script>
+  <script src="../../assets/js/script.js"></script>
 </body>
 
 </html>
