Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </article>
   </main>
 
-  <footer class="footer-bg">
+  <footer id="contato" class="footer-bg">
     <div class="footer">
       <img src="/assets/img/logo.svg" alt="Juventude em Movimento">
       <div class="footer-contato">
