--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           e adolescentes<span>.</span>
         </h1>
         <div class="form-box">
-          <h2 class="titulo">É professor de Ed. Física?</h2>
+          <span class="titulo">É professor de Ed. Física?</span>
           <p class="mensagem">Seja voluntário e transforme vidas através do esporte.</p>
           <form action="" method="get">
             <label for="nome">Nome</label>
@@ -51,11 +51,78 @@
     </article>
   </main>
 
+  <article id="sobre" class="sobre-bg container">
+    <div class="sobre-conteudo">
+      <h2 class="titulo">Sobre Nós<span>.</span></h2>
+      <div class="sobre-descricao">
+        <h3>Quem Somos<span>.</span></h3>
+        <p>No coração de Campinas - SP, nasceu o projeto <strong>Juventude em Movimento</strong>, com a missão de transformar a vida de crianças e adolescentes das comunidades carentes e promover a inclusão social através do esporte. A ideia surgiu a partir de uma conversa com amigos. Acreditamos no potencial do esporte como ferramenta de evolução e transformação na vida das pessoas.</p>
+      </div>
+      <div class="sobre-descricao">
+        <h3>Nossa Missão<span>.</span></h3>
+        <p>Nossa missão é oferecer uma oportunidade enriquecedora para jovens que enfrentam condições adversas. Acreditamos que o esporte pode ser uma poderosa ferramenta de transformação, promovendo o desenvolvimento físico, emocional e social. Queremos proporcionar um ambiente seguro e acolhedor onde cada jovem possa explorar seu potencial, aprender novos valores e construir um futuro melhor.</p>
+      </div>
+      <div class="sobre-descricao">
+        <h3>Nossa Visão<span>.</span></h3>
+        <p>Sonhamos com uma comunidade onde todos os jovens, independentemente de sua origem ou condição financeira, tenham acesso a oportunidades que possam mudar suas vidas para melhor. Através de programas de esportes e atividades educacionais, buscamos preparar nossos participantes para um futuro promissor e livre dos riscos associados à exclusão social.</p>
+      </div>
+      <div class="sobre-descricao">
+        <h3>Nossos Valores<span>.</span></h3>
+        <ul>
+          <li><strong>Compromisso:</strong> Estamos dedicados a criar um impacto positivo e duradouro na vida dos jovens.</li>
+          <li><strong>Inclusão:</strong> Promovemos um ambiente onde todos são bem-vindos e respeitados.</li>
+          <li><strong>Desenvolvimento:</strong> Incentivamos o crescimento pessoal e o desenvolvimento de habilidades através do esporte.</li>
+          <li><strong>Colaboração:</strong> Trabalhamos juntos com a comunidade, voluntários e parceiros para alcançar nossos objetivos.</li>
+        </ul>
+      </div>
+    </div>
+  </article>
+
+  <!-- <article id="projeto" class="projeto">
+    <h1>O Projeto</h1>
+    <h2>O Que Fazemos</h2>
+    <p>O [Nome do Projeto] oferece uma variedade de atividades esportivas e educacionais para crianças e adolescentes em situação de vulnerabilidade. Nosso foco é criar um programa diversificado que inclua esportes individuais e em equipe, bem como atividades que promovam habilidades de vida e valores positivos.</p>
+    <h2>Nossos Programas</h2>
+    <ul>
+      <li>Esportes Coletivos e Individuais: Futebol, basquete, vôlei, natação e muito mais. Cada modalidade é selecionada para atender às necessidades e interesses dos jovens, promovendo tanto a diversão quanto o aprendizado.</li>
+      <li>Oficinas Educativas: Atividades que vão além do esporte, incluindo workshops sobre saúde, nutrição e desenvolvimento pessoal.</li>
+      <li>Eventos Comunitários: Realizamos eventos para envolver a comunidade e celebrar as conquistas dos nossos jovens, criando um senso de pertencimento e orgulho.</li>
+    </ul>
+    <h2>Impacto Esperado</h2>
+    <p>Queremos que cada participante descubra suas habilidades, construa confiança e desenvolva um senso de responsabilidade. O impacto que buscamos vai além do campo de jogo; queremos ver nossos jovens prosperarem em todos os aspectos de suas vidas, com habilidades que os ajudem a superar desafios e alcançar seus objetivos.</p>
+    <h2>Como Participar</h2>
+    <p>Você pode se envolver de várias maneiras: tornando-se um voluntário, doando recursos, ou simplesmente ajudando a divulgar nosso trabalho. Sua participação é crucial para que possamos continuar oferecendo esses programas vitais.</p>
+  </article> -->
+
+  <!-- <article id="atividades" class="atividades">
+    <h1>Atividades</h1>
+    <h2>Nossas Atividades</h2>
+    <p>O [Nome do Projeto] oferece uma ampla gama de atividades destinadas a promover o desenvolvimento físico e mental dos nossos participantes. Cada atividade é cuidadosamente planejada para garantir que seja divertida, educativa e adaptada às necessidades dos jovens.</p>
+    <h2>Atividades Esportivas</h2>
+    <ul>
+      <li>Futebol: Treinos e partidas que promovem o trabalho em equipe, a disciplina e o respeito.</li>
+      <li>Basquete: Aulas que ensinam habilidades técnicas e táticas, além de promover a saúde e o bem-estar.</li>
+      <li>Vôlei: Atividades que incentivam a cooperação e a comunicação entre os participantes.</li>
+      <li>Natação: Treinos que desenvolvem resistência e habilidades de sobrevivência, além de promover a saúde física.</li>
+    </ul>
+    <h2>Oficinas e Workshops</h2>
+    <ul>
+      <li>Saúde e Nutrição: Aulas que ensinam a importância de uma alimentação balanceada e hábitos saudáveis.</li>
+      <li>Desenvolvimento Pessoal: Sessões sobre habilidades de vida, autoestima e gerenciamento de tempo.</li>
+      <li>Educação e Cultura: Atividades que incentivam a curiosidade e o aprendizado sobre diferentes temas culturais e educacionais.</li>
+    </ul>
+    <h2>Eventos e Competições</h2>
+    <p>Organizamos competições amistosas e eventos especiais para que nossos jovens possam mostrar suas habilidades e se integrar com a comunidade. Estes eventos são uma oportunidade para celebrar conquistas e criar memórias positivas.</p>
+    <h2>Como Se Inscrever</h2>
+    <p>Para participar das nossas atividades, os jovens devem se inscrever através do nosso site ou visitar nossas instalações. Oferecemos um processo de inscrição simples e acessível para garantir que todos possam ter a oportunidade de participar.</p>
+    <p>Se você está interessado em se envolver ou deseja mais informações sobre nossos programas e como se inscrever, entre em contato conosco!</p>
+  </article> -->
+
   <footer id="contato" class="footer-bg">
     <div class="footer">
       <img src="/assets/img/logo.svg" alt="Juventude em Movimento">
       <div class="footer-contato">
-        <h3 class="">Contato</h3>
+        <h3>Contato</h3>
         <ul>
           <li><a href="tel:+5519992218997">+55 19 99221-8997</a></li>
           <li><a href="mailto:contato@juventudeemmovimento.com">contato@juventudeemmovimento.com</a></li>
@@ -75,7 +142,7 @@
         </div>
       </div>
       <div class="footer-informacoes">
-        <h3 class="">Informações</h3>
+        <h3>Informações</h3>
         <nav>
           <ul>
             <li><a href="#sobre">Sobre Nós</a></li>
