--- a/index.html
+++ b/index.html
@@ -78,21 +78,31 @@
     </div>
   </article>
 
-  <!-- <article id="projeto" class="projeto">
-    <h1>O Projeto</h1>
-    <h2>O Que Fazemos</h2>
-    <p>O [Nome do Projeto] oferece uma variedade de atividades esportivas e educacionais para crianças e adolescentes em situação de vulnerabilidade. Nosso foco é criar um programa diversificado que inclua esportes individuais e em equipe, bem como atividades que promovam habilidades de vida e valores positivos.</p>
-    <h2>Nossos Programas</h2>
-    <ul>
-      <li>Esportes Coletivos e Individuais: Futebol, basquete, vôlei, natação e muito mais. Cada modalidade é selecionada para atender às necessidades e interesses dos jovens, promovendo tanto a diversão quanto o aprendizado.</li>
-      <li>Oficinas Educativas: Atividades que vão além do esporte, incluindo workshops sobre saúde, nutrição e desenvolvimento pessoal.</li>
-      <li>Eventos Comunitários: Realizamos eventos para envolver a comunidade e celebrar as conquistas dos nossos jovens, criando um senso de pertencimento e orgulho.</li>
-    </ul>
-    <h2>Impacto Esperado</h2>
-    <p>Queremos que cada participante descubra suas habilidades, construa confiança e desenvolva um senso de responsabilidade. O impacto que buscamos vai além do campo de jogo; queremos ver nossos jovens prosperarem em todos os aspectos de suas vidas, com habilidades que os ajudem a superar desafios e alcançar seus objetivos.</p>
-    <h2>Como Participar</h2>
-    <p>Você pode se envolver de várias maneiras: tornando-se um voluntário, doando recursos, ou simplesmente ajudando a divulgar nosso trabalho. Sua participação é crucial para que possamos continuar oferecendo esses programas vitais.</p>
-  </article> -->
+  <article id="projeto" class="projeto-bg">
+    <div class="projeto-conteudo">
+      <h2>O Projeto</h2>
+      <div>
+        <h3>O Que Fazemos</h3>
+        <p>O [Nome do Projeto] oferece uma variedade de atividades esportivas e educacionais para crianças e adolescentes em situação de vulnerabilidade. Nosso foco é criar um programa diversificado que inclua esportes individuais e em equipe, bem como atividades que promovam habilidades de vida e valores positivos.</p>
+      </div>
+      <div>
+        <h3>Nossos Programas</h3>
+        <ul>
+          <li>Esportes Coletivos e Individuais: Futebol, basquete, vôlei, natação e muito mais. Cada modalidade é selecionada para atender às necessidades e interesses dos jovens, promovendo tanto a diversão quanto o aprendizado.</li>
+          <li>Oficinas Educativas: Atividades que vão além do esporte, incluindo workshops sobre saúde, nutrição e desenvolvimento pessoal.</li>
+          <li>Eventos Comunitários: Realizamos eventos para envolver a comunidade e celebrar as conquistas dos nossos jovens, criando um senso de pertencimento e orgulho.</li>
+        </ul>
+      </div>
+      <div>
+        <h3>Impacto Esperado</h3>
+        <p>Queremos que cada participante descubra suas habilidades, construa confiança e desenvolva um senso de responsabilidade. O impacto que buscamos vai além do campo de jogo; queremos ver nossos jovens prosperarem em todos os aspectos de suas vidas, com habilidades que os ajudem a superar desafios e alcançar seus objetivos.</p>
+      </div>
+      <div>
+        <h3>Como Participar</h3>
+        <p>Você pode se envolver de várias maneiras: tornando-se um voluntário, doando recursos, ou simplesmente ajudando a divulgar nosso trabalho. Sua participação é crucial para que possamos continuar oferecendo esses programas vitais.</p>
+      </div>
+    </div>
+  </article>
 
   <!-- <article id="atividades" class="atividades">
     <h1>Atividades</h1>
