article projeto finalizado

--- a/index.html
+++ b/index.html
@@ -79,26 +79,23 @@
   </article>
 
   <article id="projeto" class="projeto-bg">
-    <div class="projeto-conteudo">
-      <h2>O Projeto</h2>
-      <div>
-        <h3>O Que Fazemos</h3>
-        <p>O [Nome do Projeto] oferece uma variedade de atividades esportivas e educacionais para crianças e adolescentes em situação de vulnerabilidade. Nosso foco é criar um programa diversificado que inclua esportes individuais e em equipe, bem como atividades que promovam habilidades de vida e valores positivos.</p>
+    <div class="projeto-conteudo container">
+      <h2 class="titulo">O Projeto<span>.</span></h2>
+      <div class="projeto-descricao">
+        <h3>O Que Fazemos<span>.</span></h3>
+        <p>O projeto Juventude em Movimento, juntamente de professores de Educação Física voluntários, leva para os jovens a oportunidade de desenvolver habilidades esportivas, que somadas a um ambiente seguro, acolhedor e de inclusão, podem transformar a realidade de cada um deles e lhes proporcionar um futuro brilhante.</p>
       </div>
-      <div>
-        <h3>Nossos Programas</h3>
+      <div class="projeto-descricao">
+        <h3>Nossos Programas<span>.</span></h3>
         <ul>
-          <li>Esportes Coletivos e Individuais: Futebol, basquete, vôlei, natação e muito mais. Cada modalidade é selecionada para atender às necessidades e interesses dos jovens, promovendo tanto a diversão quanto o aprendizado.</li>
-          <li>Oficinas Educativas: Atividades que vão além do esporte, incluindo workshops sobre saúde, nutrição e desenvolvimento pessoal.</li>
-          <li>Eventos Comunitários: Realizamos eventos para envolver a comunidade e celebrar as conquistas dos nossos jovens, criando um senso de pertencimento e orgulho.</li>
+          <li><span class="programa-item">Esportes Coletivos e Individuais</span><span>:</span> Futebol, basquete, vôlei, tênis, natação, corrida de rua e muito mais. Cada modalidade é selecionada para atender às necessidades e interesses dos jovens, promovendo tanto a diversão quanto o aprendizado.</li>
+          <li><span class="programa-item">Oficinas Educativas</span><span>:</span> Oferecemos também atividades que vão além do esporte, como oficinas de pintura, aulas de informática e de instrumentos musicais.</li>
+          <li><span class="programa-item">Apoio à Familia</span><span>:</span> Com apoio da comunidade e graças as doações, podemos ajudar as familias dos jovens com cestas básicas, distribuição de roupas e utensílios domésticos.</li>
+          <li><span class="programa-item">Eventos Comunitários</span><span>:</span> Realizamos eventos para envolver a comunidade e celebrar as conquistas dos nossos jovens, criando um senso de pertencimento e orgulho.</li>
         </ul>
       </div>
-      <div>
-        <h3>Impacto Esperado</h3>
-        <p>Queremos que cada participante descubra suas habilidades, construa confiança e desenvolva um senso de responsabilidade. O impacto que buscamos vai além do campo de jogo; queremos ver nossos jovens prosperarem em todos os aspectos de suas vidas, com habilidades que os ajudem a superar desafios e alcançar seus objetivos.</p>
-      </div>
-      <div>
-        <h3>Como Participar</h3>
+      <div class="projeto-descricao">
+        <h3>Como Participar<span>.</span></h3>
         <p>Você pode se envolver de várias maneiras: tornando-se um voluntário, doando recursos, ou simplesmente ajudando a divulgar nosso trabalho. Sua participação é crucial para que possamos continuar oferecendo esses programas vitais.</p>
       </div>
     </div>
