melhoria na seção sobre

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     </article>
   </main>
 
-  <article id="sobre" class="sobre-bg container">
-    <div class="sobre-conteudo">
+  <article id="sobre" class="sobre-bg">
+    <div class="sobre-conteudo container">
       <h2 class="titulo">Sobre Nós<span>.</span></h2>
       <div class="sobre-descricao">
         <h3>Quem Somos<span>.</span></h3>
@@ -69,10 +69,10 @@
       <div class="sobre-descricao">
         <h3>Nossos Valores<span>.</span></h3>
         <ul>
-          <li><strong>Compromisso:</strong> Estamos dedicados a criar um impacto positivo e duradouro na vida dos jovens.</li>
-          <li><strong>Inclusão:</strong> Promovemos um ambiente onde todos são bem-vindos e respeitados.</li>
-          <li><strong>Desenvolvimento:</strong> Incentivamos o crescimento pessoal e o desenvolvimento de habilidades através do esporte.</li>
-          <li><strong>Colaboração:</strong> Trabalhamos juntos com a comunidade, voluntários e parceiros para alcançar nossos objetivos.</li>
+          <li><span class="valor-item">Compromisso<span>:</span></span> Estamos dedicados a criar um impacto positivo e duradouro na vida dos jovens.</li>
+          <li><span class="valor-item">Inclusão<span>:</span></span> Promovemos um ambiente onde todos são bem-vindos e respeitados.</li>
+          <li><span class="valor-item">Desenvolvimento<span>:</span></span> Incentivamos o crescimento pessoal e o desenvolvimento de habilidades através do esporte.</li>
+          <li><span class="valor-item">Colaboração<span>:</span></span> Trabalhamos juntos com a comunidade, voluntários e parceiros para alcançar nossos objetivos.</li>
         </ul>
       </div>
     </div>
