alterei a seção sobre

--- a/index.html
+++ b/index.html
@@ -51,31 +51,39 @@
     </article>
   </main>
 
-  <article id="sobre" class="sobre-bg">
-    <div class="sobre-conteudo container">
+  <article id="sobre" class="sobre-conteudo container">
       <h2 class="titulo">Sobre Nós<span>.</span></h2>
-      <div class="sobre-descricao">
-        <h3>Quem Somos<span>.</span></h3>
-        <p>No coração de Campinas - SP, nasceu o projeto <strong>Juventude em Movimento</strong>, com a missão de transformar a vida de crianças e adolescentes das comunidades carentes e promover a inclusão social através do esporte. A ideia surgiu a partir de uma conversa com amigos. Acreditamos no potencial do esporte como ferramenta de evolução e transformação na vida das pessoas.</p>
+      <div class="sobre-descricao1">
+        <div class="sobre-item">
+          <h3>Quem Somos<span>.</span></h3>
+          <p>No coração de Campinas - SP, nasceu o projeto <strong>Juventude em Movimento</strong>, com a missão de transformar a vida de crianças e adolescentes das comunidades carentes e promover a inclusão social através do esporte. A ideia surgiu a partir de uma conversa com amigos. Acreditamos no potencial do esporte como ferramenta de evolução e transformação na vida das pessoas.</p>
+        </div>
+        <div class="sobre-item">
+          <h3>Nossa Missão<span>.</span></h3>
+          <p>Nossa missão é oferecer uma oportunidade enriquecedora para jovens que enfrentam condições adversas. Acreditamos que o esporte pode ser uma poderosa ferramenta de transformação, promovendo o desenvolvimento físico, emocional e social. Queremos proporcionar um ambiente seguro e acolhedor onde cada jovem possa explorar seu potencial, aprender novos valores e construir um futuro melhor.</p>
+        </div>
+        <picture class="sobre-img">
+          <img src="assets/img/sobre-img.jpg" alt="Professor e Aluno praticando Tênis">
+        </picture>
       </div>
-      <div class="sobre-descricao">
-        <h3>Nossa Missão<span>.</span></h3>
-        <p>Nossa missão é oferecer uma oportunidade enriquecedora para jovens que enfrentam condições adversas. Acreditamos que o esporte pode ser uma poderosa ferramenta de transformação, promovendo o desenvolvimento físico, emocional e social. Queremos proporcionar um ambiente seguro e acolhedor onde cada jovem possa explorar seu potencial, aprender novos valores e construir um futuro melhor.</p>
+      <div class="sobre-descricao2">
+        <div class="sobre-item">
+          <h3>Nossa Visão<span>.</span></h3>
+          <p>Sonhamos com uma comunidade onde todos os jovens, independentemente de sua origem ou condição financeira, tenham acesso a oportunidades que possam mudar suas vidas para melhor. Através de programas de esportes e atividades educacionais, buscamos preparar nossos participantes para um futuro promissor e livre dos riscos associados à exclusão social.</p>
+        </div>
+        <div class="sobre-item">
+          <h3>Nossos Valores<span>.</span></h3>
+          <ul>
+            <li><span class="valor-item">Compromisso<span>:</span></span> Estamos dedicados a criar um impacto positivo e duradouro na vida dos jovens.</li>
+            <li><span class="valor-item">Inclusão<span>:</span></span> Promovemos um ambiente onde todos são bem-vindos e respeitados.</li>
+            <li><span class="valor-item">Desenvolvimento<span>:</span></span> Incentivamos o crescimento pessoal e o desenvolvimento de habilidades através do esporte.</li>
+            <li><span class="valor-item">Colaboração<span>:</span></span> Trabalhamos juntos com a comunidade, voluntários e parceiros para alcançar nossos objetivos.</li>
+          </ul>
+        </div>
+        <picture class="sobre-img">
+          <img src="assets/img/sobre-img2.jpg" alt="Professor e Aluno praticando Tênis">
+        </picture>
       </div>
-      <div class="sobre-descricao">
-        <h3>Nossa Visão<span>.</span></h3>
-        <p>Sonhamos com uma comunidade onde todos os jovens, independentemente de sua origem ou condição financeira, tenham acesso a oportunidades que possam mudar suas vidas para melhor. Através de programas de esportes e atividades educacionais, buscamos preparar nossos participantes para um futuro promissor e livre dos riscos associados à exclusão social.</p>
-      </div>
-      <div class="sobre-descricao">
-        <h3>Nossos Valores<span>.</span></h3>
-        <ul>
-          <li><span class="valor-item">Compromisso<span>:</span></span> Estamos dedicados a criar um impacto positivo e duradouro na vida dos jovens.</li>
-          <li><span class="valor-item">Inclusão<span>:</span></span> Promovemos um ambiente onde todos são bem-vindos e respeitados.</li>
-          <li><span class="valor-item">Desenvolvimento<span>:</span></span> Incentivamos o crescimento pessoal e o desenvolvimento de habilidades através do esporte.</li>
-          <li><span class="valor-item">Colaboração<span>:</span></span> Trabalhamos juntos com a comunidade, voluntários e parceiros para alcançar nossos objetivos.</li>
-        </ul>
-      </div>
-    </div>
   </article>
 
   <article id="projeto" class="projeto-bg">
