Alterei os gaps no sobre

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           </ul>
         </div>
         <picture class="sobre-img">
-          <img src="assets/img/sobre-img2.jpg" alt="Professor e Aluno praticando Tênis">
+          <img src="assets/img/sobre-img2.jpg" alt="Crianças Jogando Vôlei de Areia">
         </picture>
       </div>
   </article>
