--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="form-box">
           <span class="titulo">É professor de Ed. Física?</span>
           <p class="mensagem">Seja voluntário e transforme vidas através do esporte.</p>
-          <form action="" method="get">
+          <form action="" method="post">
             <label for="nome">Nome</label>
             <input type="text" name="nome">
             <label for="email">E-mail</label>
@@ -52,38 +52,38 @@
   </main>
 
   <article id="sobre" class="sobre-conteudo container">
-      <h2 class="titulo">Sobre Nós<span>.</span></h2>
-      <div class="sobre-descricao1">
-        <div class="sobre-item">
-          <h3>Quem Somos<span>.</span></h3>
-          <p>No coração de Campinas - SP, nasceu o projeto <strong>Juventude em Movimento</strong>, com a missão de transformar a vida de crianças e adolescentes das comunidades carentes e promover a inclusão social através do esporte. A ideia surgiu a partir de uma conversa com amigos. Acreditamos no potencial do esporte como ferramenta de evolução e transformação na vida das pessoas.</p>
-        </div>
-        <div class="sobre-item">
-          <h3>Nossa Missão<span>.</span></h3>
-          <p>Nossa missão é oferecer uma oportunidade enriquecedora para jovens que enfrentam condições adversas. Acreditamos que o esporte pode ser uma poderosa ferramenta de transformação, promovendo o desenvolvimento físico, emocional e social. Queremos proporcionar um ambiente seguro e acolhedor onde cada jovem possa explorar seu potencial, aprender novos valores e construir um futuro melhor.</p>
-        </div>
-        <picture class="sobre-img">
-          <img src="assets/img/sobre-img.jpg" alt="Professor e Aluno praticando Tênis">
-        </picture>
+    <h2 class="titulo">Sobre Nós<span>.</span></h2>
+    <div class="sobre-descricao1">
+      <div class="sobre-item">
+        <h3>Quem Somos<span>.</span></h3>
+        <p>No coração de Campinas - SP, nasceu o projeto <strong>Juventude em Movimento</strong>, com a missão de transformar a vida de crianças e adolescentes das comunidades carentes e promover a inclusão social através do esporte. A ideia surgiu a partir de uma conversa com amigos, e acreditamos no potencial do esporte como ferramenta de evolução e transformação na vida das crianças e adolescentes.</p>
       </div>
-      <div class="sobre-descricao2">
-        <div class="sobre-item">
-          <h3>Nossa Visão<span>.</span></h3>
-          <p>Sonhamos com uma comunidade onde todos os jovens, independentemente de sua origem ou condição financeira, tenham acesso a oportunidades que possam mudar suas vidas para melhor. Através de programas de esportes e atividades educacionais, buscamos preparar nossos participantes para um futuro promissor e livre dos riscos associados à exclusão social.</p>
-        </div>
-        <div class="sobre-item">
-          <h3>Nossos Valores<span>.</span></h3>
-          <ul>
-            <li><span class="valor-item">Compromisso<span>:</span></span> Estamos dedicados a criar um impacto positivo e duradouro na vida dos jovens.</li>
-            <li><span class="valor-item">Inclusão<span>:</span></span> Promovemos um ambiente onde todos são bem-vindos e respeitados.</li>
-            <li><span class="valor-item">Desenvolvimento<span>:</span></span> Incentivamos o crescimento pessoal e o desenvolvimento de habilidades através do esporte.</li>
-            <li><span class="valor-item">Colaboração<span>:</span></span> Trabalhamos juntos com a comunidade, voluntários e parceiros para alcançar nossos objetivos.</li>
-          </ul>
-        </div>
-        <picture class="sobre-img">
-          <img src="assets/img/sobre-img2.jpg" alt="Crianças Jogando Vôlei de Areia">
-        </picture>
+      <div class="sobre-item">
+        <h3>Nossa Missão<span>.</span></h3>
+        <p>Nossa missão é oferecer uma oportunidade enriquecedora para jovens que enfrentam condições adversas. Acreditamos que o esporte pode trazer benefícios para o amanhã desses jovens, promovendo o desenvolvimento físico, emocional e social. Queremos proporcionar um ambiente seguro e acolhedor onde cada um possa explorar seu potencial, aprender novos valores e construir um futuro melhor.</p>
       </div>
+      <picture class="sobre-img">
+        <img src="assets/img/sobre-img.jpg" alt="Professor e Aluno praticando Tênis">
+      </picture>
+    </div>
+    <div class="sobre-descricao2">
+      <div class="sobre-item">
+        <h3>Nossa Visão<span>.</span></h3>
+        <p>Sonhamos com uma comunidade onde todos os jovens, independentemente de sua origem ou condição financeira, tenham acesso a oportunidades que possam mudar suas vidas para melhor. Através de programas de esportes e atividades educacionais, buscamos preparar nossas crianças e adolescentes para um futuro promissor e livre dos riscos associados à exclusão social.</p>
+      </div>
+      <div class="sobre-item">
+        <h3>Nossos Valores<span>.</span></h3>
+        <ul>
+          <li><span class="valor-item">Compromisso<span>:</span></span> Estamos dedicados a criar um impacto positivo e duradouro na vida dos jovens.</li>
+          <li><span class="valor-item">Inclusão<span>:</span></span> Promovemos um ambiente onde todos são bem-vindos e respeitados.</li>
+          <li><span class="valor-item">Desenvolvimento<span>:</span></span> Incentivamos o crescimento pessoal e o desenvolvimento de habilidades através do esporte.</li>
+          <li><span class="valor-item">Colaboração<span>:</span></span> Trabalhamos juntos com a comunidade, voluntários e parceiros para alcançar nossos objetivos.</li>
+        </ul>
+      </div>
+      <picture class="sobre-img">
+        <img src="assets/img/sobre-img2.jpg" alt="Crianças Jogando Vôlei de Areia">
+      </picture>
+    </div>
   </article>
 
   <article id="projeto" class="projeto-bg">
@@ -91,7 +91,7 @@
       <h2 class="titulo">O Projeto<span>.</span></h2>
       <div class="projeto-descricao">
         <h3>O Que Fazemos<span>.</span></h3>
-        <p>O projeto Juventude em Movimento, juntamente de professores de Educação Física voluntários, leva para os jovens a oportunidade de desenvolver habilidades esportivas, que somadas a um ambiente seguro, acolhedor e de inclusão, podem transformar a realidade de cada um deles e lhes proporcionar um futuro brilhante.</p>
+        <p>O projeto Juventude em Movimento, juntamente de professores de Educação Física e demais voluntários, levam para os jovens a oportunidade de desenvolver habilidades esportivas, que somadas a um ambiente acolhedor e de inclusão, podem transformar a realidade de cada um deles e lhes proporcionar um futuro melhor.</p>
       </div>
       <div class="projeto-descricao">
         <h3>Nossos Programas<span>.</span></h3>
@@ -109,29 +109,35 @@
     </div>
   </article>
 
-  <!-- <article id="atividades" class="atividades">
-    <h1>Atividades</h1>
-    <h2>Nossas Atividades</h2>
-    <p>O [Nome do Projeto] oferece uma ampla gama de atividades destinadas a promover o desenvolvimento físico e mental dos nossos participantes. Cada atividade é cuidadosamente planejada para garantir que seja divertida, educativa e adaptada às necessidades dos jovens.</p>
-    <h2>Atividades Esportivas</h2>
-    <ul>
-      <li>Futebol: Treinos e partidas que promovem o trabalho em equipe, a disciplina e o respeito.</li>
-      <li>Basquete: Aulas que ensinam habilidades técnicas e táticas, além de promover a saúde e o bem-estar.</li>
-      <li>Vôlei: Atividades que incentivam a cooperação e a comunicação entre os participantes.</li>
-      <li>Natação: Treinos que desenvolvem resistência e habilidades de sobrevivência, além de promover a saúde física.</li>
-    </ul>
-    <h2>Oficinas e Workshops</h2>
-    <ul>
-      <li>Saúde e Nutrição: Aulas que ensinam a importância de uma alimentação balanceada e hábitos saudáveis.</li>
-      <li>Desenvolvimento Pessoal: Sessões sobre habilidades de vida, autoestima e gerenciamento de tempo.</li>
-      <li>Educação e Cultura: Atividades que incentivam a curiosidade e o aprendizado sobre diferentes temas culturais e educacionais.</li>
-    </ul>
-    <h2>Eventos e Competições</h2>
-    <p>Organizamos competições amistosas e eventos especiais para que nossos jovens possam mostrar suas habilidades e se integrar com a comunidade. Estes eventos são uma oportunidade para celebrar conquistas e criar memórias positivas.</p>
-    <h2>Como Se Inscrever</h2>
-    <p>Para participar das nossas atividades, os jovens devem se inscrever através do nosso site ou visitar nossas instalações. Oferecemos um processo de inscrição simples e acessível para garantir que todos possam ter a oportunidade de participar.</p>
-    <p>Se você está interessado em se envolver ou deseja mais informações sobre nossos programas e como se inscrever, entre em contato conosco!</p>
-  </article> -->
+  <article id="atividades" class="atividades-conteudo container">
+    <h2 class="titulo">Atividades<span>.</span></h2>
+    <div class="atividades-imagens">
+      <picture>
+        <h3>Musica</h3>
+        <img src="/assets/img/atividades1.jpg" alt="Criança tocando teclado">
+      </picture>
+      <picture>
+        <h3>Corrida</h3>
+        <img src="/assets/img/atividades2.jpg" alt="Jovens correndo">
+      </picture>
+      <picture>
+        <h3>Futebol</h3>
+        <img src="/assets/img/atividades3.jpg" alt="Criança sendo auxiliada pelo professor em campo de futebol">
+      </picture>
+      <picture>
+        <h3>Oficinas</h3>
+        <img src="/assets/img/atividades4.jpg" alt="Criança em uma oficina de artesanato">
+      </picture>
+      <picture>
+        <h3>Tênis</h3>
+        <img src="/assets/img/atividades5.jpg" alt="Professor auxiliando aluno na prática de Tênis">
+      </picture>
+      <picture>
+        <h3>Natação</h3>
+        <img src="/assets/img/atividades6.jpg" alt="Jovens em posição de largada na piscina olímpica">
+      </picture>
+    </div>
+  </article>
 
   <footer id="contato" class="footer-bg">
     <div class="footer">
@@ -139,9 +145,9 @@
       <div class="footer-contato">
         <h3>Contato</h3>
         <ul>
-          <li><a href="tel:+5519992218997">+55 19 99221-8997</a></li>
+          <li><a href="tel:+551999999999">+55 19 9999-9999</a></li>
           <li><a href="mailto:contato@juventudeemmovimento.com">contato@juventudeemmovimento.com</a></li>
-          <li>Rua Jacy Teixeira, 360 - Jd. do Lago</li>
+          <li>Rua da Esperança, 1360 - Jd. do Lago</li>
           <li>Campinas - SP</li>
         </ul>
         <div class="footer-redes">
