--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       </div>
       <div class="projeto-descricao">
         <h3>Como Participar<span>.</span></h3>
-        <p>Você pode se envolver de várias maneiras: tornando-se um voluntário, doando recursos, ou simplesmente ajudando a divulgar nosso trabalho. Sua participação é crucial para que possamos continuar oferecendo esses programas vitais.</p>
+        <p>Você pode se envolver de várias maneiras: tornando-se um voluntário, doando recursos, ou simplesmente ajudando a divulgar nosso trabalho. Sua participação é crucial para que possamos continuar transformando vidas através do esporte. Entre em contato conosco para saber como ajudar.</p>
       </div>
     </div>
   </article>
