Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -114,27 +114,27 @@
     <div class="atividades-imagens">
       <picture>
         <h3>Musica</h3>
-        <img src="/assets/img/atividades1.jpg" alt="Criança tocando teclado">
+        <img src="assets/img/atividades1.jpg" alt="Criança tocando teclado">
       </picture>
       <picture>
         <h3>Corrida</h3>
-        <img src="/assets/img/atividades2.jpg" alt="Jovens correndo">
+        <img src="assets/img/atividades2.jpg" alt="Jovens correndo">
       </picture>
       <picture>
         <h3>Futebol</h3>
-        <img src="/assets/img/atividades3.jpg" alt="Criança sendo auxiliada pelo professor em campo de futebol">
+        <img src="assets/img/atividades3.jpg" alt="Criança sendo auxiliada pelo professor em campo de futebol">
       </picture>
       <picture>
         <h3>Oficinas</h3>
-        <img src="/assets/img/atividades4.jpg" alt="Criança em uma oficina de artesanato">
+        <img src="assets/img/atividades4.jpg" alt="Criança em uma oficina de artesanato">
       </picture>
       <picture>
         <h3>Tênis</h3>
-        <img src="/assets/img/atividades5.jpg" alt="Professor auxiliando aluno na prática de Tênis">
+        <img src="assets/img/atividades5.jpg" alt="Professor auxiliando aluno na prática de Tênis">
       </picture>
       <picture>
         <h3>Natação</h3>
-        <img src="/assets/img/atividades6.jpg" alt="Jovens em posição de largada na piscina olímpica">
+        <img src="assets/img/atividades6.jpg" alt="Jovens em posição de largada na piscina olímpica">
       </picture>
     </div>
   </article>
