Fixei o menu ao topo e resolvi bugs de atualiazação de página

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Juventude em Movimento</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -19,6 +19,7 @@
         <button id="btn-mobile" class="btn-mobile" aria-label="Abrir Menu" aria-haspopup="true" aria-controls="menu" aria-expanded="false"><span class="hamburger"></span>
         </button>
         <ul class="header-menu" role="menu">
+          <li><a href="#home">Inicio</a></li>
           <li><a href="#sobre">Sobre Nós</a></li>
           <li><a href="#projeto">O Projeto</a></li>
           <li><a href="#atividades">Atividades</a></li>
